Cloudformation/1.setup_cf.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Description: >
  This is the initial cloudformation template for the aws console demo.
  The documentation and git repo for this project is contained at:
  https://github.com/limivorous/aws-console-demo.

Parameters:
  pDemoSubnet:
    Description: What subnet would you like for the Demo environment? If you don't know then leave this as is.
    Type: String
    Default: 10.90.128.0/20 #This default gives us the range to 10.90.143.254
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
  pDatabaseName:
    Description: What name would you like for the database? If you don't know then leave this as is.
    Type: String
    Default: "PreBuilt"
  pDatabaseSize:
    Description: What instance would you like for the database? If you don't know then leave this as is.
    Type: String
    Default: "db.m4.large"
  pDBUsername:
    Description: What username would you like for the database? If you don't know then leave this as is.
    Type: String
    Default: "sysdba"
  pDBpassword:
    Description: What password would you like for the database? If you don't know then leave this as is.
    Type: String
    Default: "NeVerused879"

Resources:

  ###################################
  #
  #   VPC
  #
  ###################################


  # We are only using a single VPC for this demo. We need to make hosts public for later in the demo so DNS is enabled.

  DemoVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref pDemoSubnet
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Stage
          Value: 'Demo'
        - Key: Name
          Value: 'Demo VPC'


  ###################################
  #
  #  Subnets
  #
  ###################################

  #Public subnets - 3 created.

  DemoPublicSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub '${AWS::Region}a'
      CidrBlock: !Select [ 0, !Cidr [ !GetAtt DemoVPC.CidrBlock, 9, 8 ]]
      VpcId: !Ref DemoVPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: 'Demo Public Subnet A'
  DemoPublicSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub '${AWS::Region}b'
      CidrBlock: !Select [ 1, !Cidr [ !GetAtt DemoVPC.CidrBlock, 9, 8 ]]
      VpcId: !Ref DemoVPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: 'Demo Public Subnet B'
  DemoPublicSubnetC:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub '${AWS::Region}c'
      CidrBlock: !Select [ 2, !Cidr [ !GetAtt DemoVPC.CidrBlock, 9, 8 ]]
      VpcId: !Ref DemoVPC
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: 'Demo Public Subnet C'


  #Private subnets - 3 created.

  DataPrivateSubnetA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub '${AWS::Region}a'
      CidrBlock: !Select [ 6, !Cidr [ !GetAtt DemoVPC.CidrBlock, 9, 8 ]]
      VpcId: !Ref DemoVPC
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: 'Demo Data Subnet A'
  DataPrivateSubnetB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub '${AWS::Region}b'
      CidrBlock: !Select [ 7, !Cidr [ !GetAtt DemoVPC.CidrBlock, 9, 8 ]]
      VpcId: !Ref DemoVPC
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: 'Demo Data Subnet B'
  DataPrivateSubnetC:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: !Sub '${AWS::Region}c'
      CidrBlock: !Select [ 8, !Cidr [ !GetAtt DemoVPC.CidrBlock, 9, 8 ]]
      VpcId: !Ref DemoVPC
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: 'Demo Data Subnet C'


  ###################################
  #
  #  Internet Gateway
  #
  ###################################

  #Gateway and attachment to VPC

  DemoInetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Stage
          Value: 'Demo'
        - Key: Name
          Value: 'Demo Internet Gateway'
  DemoAttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref DemoVPC
      InternetGatewayId: !Ref DemoInetGateway

  ###################################
  #
  #  Route tables
  #
  ###################################


  #Route tables and associations + default route
  #Public Subnets
  DemoPublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DemoVPC
      Tags:
        - Key: Stage
          Value: 'Demo'
        - Key: Name
          Value: 'Demo Public Subnets Routes'

  DemoPublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DemoPublicSubnetA
      RouteTableId: !Ref DemoPublicSubnetRouteTable
  DemoPublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DemoPublicSubnetB
      RouteTableId: !Ref DemoPublicSubnetRouteTable
  DemoPublicSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DemoPublicSubnetC
      RouteTableId: !Ref DemoPublicSubnetRouteTable


  #Route tables and associations + default route
  #Public Subnets
  DemoDataSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref DemoVPC
      Tags:
        - Key: Stage
          Value: 'Demo'
        - Key: Name
          Value: 'Demo Private Subnets Routes'

  DemoDataSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DataPrivateSubnetA
      RouteTableId: !Ref DemoDataSubnetRouteTable
  DemoDataSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DataPrivateSubnetB
      RouteTableId: !Ref DemoDataSubnetRouteTable
  DemoDataSubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref DataPrivateSubnetC
      RouteTableId: !Ref DemoDataSubnetRouteTable


  ###################################
  #
  #  Routes
  #
  ###################################


  #Routes for Public Subnets - via each of the gateway
  DemoPublicARoutetoInet: #Only going to create one of these as the default (for local routing) is auto created
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref DemoPublicSubnetRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref DemoInetGateway



  ###################################
  #
  #  NACLs
  #
  ###################################


  #NACL Definitions

  DemoPublicNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      Tags:
        - Key: Name
          Value: 'Demo Public NACL'
      VpcId: !Ref DemoVPC
  URLCheckerNACLPublicSubnetAAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref DemoPublicSubnetA
      NetworkAclId: !Ref DemoPublicNACL
  URLCheckerNACLPublicSubnetBAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref DemoPublicSubnetB
      NetworkAclId: !Ref DemoPublicNACL
  URLCheckerNACLPublicSubnetCAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref DemoPublicSubnetC
      NetworkAclId: !Ref DemoPublicNACL

  #NACL Rules Public
  #Ingres

  DemoNACLInboundRDP:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DemoPublicNACL
      RuleNumber: 100
      Protocol: 6 # TCP innit!
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0 #Not ideal but for the demo this will be ok.
      PortRange:
        From: 3389
        To: 3389

  DemoNACLInboundHighPorts:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DemoPublicNACL
      RuleNumber: 140
      Protocol: 6 # TCP innit!
      RuleAction: allow
      Egress: false
      CidrBlock: 0.0.0.0/0 #Not as much of a problem as this is hand off traffic.
      PortRange:
        From: 1024
        To: 65535

  #NACL Rules Public
  #Egress

  DemoNACLOutboundHighPorts:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref DemoPublicNACL
      RuleNumber: 140
      Protocol: 6 # TCP innit!
      RuleAction: allow
      Egress: true
      CidrBlock: 0.0.0.0/0 #Also not so much of a problem as this is hand off traffic
      PortRange:
        From: 1024
        To: 65535



  ###################################
  #
  #  Security Groups
  #
  ###################################


  WindowsServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref DemoVPC
      GroupName: 'Demo Windows Security Group'
      GroupDescription: 'Enable RDP Access'
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 3389
          IpProtocol: tcp
          ToPort: 3389
      Tags:
        - Key: Name
          Value: 'Demo Windows Security Group'


  DatabaseServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref DemoVPC
      GroupName: 'Demo Database Security Group'
      GroupDescription: 'Enable RDP Access'
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref WindowsServerSecurityGroup # Only allows access from the Windows server.
          FromPort: 1433
          IpProtocol: tcp
          ToPort: 1433
      Tags:
        - Key: Name
          Value: 'Demo Database Security Group'


  ###################################
  #
  #  Database Groups
  #
  ###################################

  DataTierSubnetGroup:
    Type: "AWS::RDS::DBSubnetGroup"
    Properties:
      DBSubnetGroupDescription: 'Demo Database Subnet Group'
      DBSubnetGroupName: 'Demo-Data-Subnet-Grp'
      SubnetIds:
        - !Ref DataPrivateSubnetA
        - !Ref DataPrivateSubnetB
        - !Ref DataPrivateSubnetC


  ###################################
  #
  #  Database (SQL Server in this case)
  #
  ###################################


  SQLServerInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 200
      AllowMajorVersionUpgrade: true
      AutoMinorVersionUpgrade: true
      DBInstanceClass: !Ref pDatabaseSize
      DBInstanceIdentifier: !Ref pDatabaseName
      DBSubnetGroupName: !Ref DataTierSubnetGroup
      Engine: sqlserver-se
      LicenseModel: license-included
      MultiAZ: true
      MasterUsername: !Ref pDBUsername
      MasterUserPassword: !Ref pDBpassword
      StorageType: gp2
      StorageEncrypted: true
      VPCSecurityGroups:
        - !GetAtt DatabaseServerSecurityGroup.GroupId
